5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4478/executions/1679_1105.log
== TEST (2019-05-02 03:02:42) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
if(x==lobo):
	mensagem = ("Stark")
elif(x==leao):
	mensagem = ("Lannister")
elif(x==veado):
	mensagem = ("Baratheon")
elif(x==dragao):
	mensagem = ("Targaryen")
elif(x==rosa):
	mensagem = ("Tyrell")
elif(x==sol):
	mensagem = ("Martell")
elif(x==lula):
	mensagem = ("Greyjoy")
elif(x==esfolado):
	mensagem = ("Bolton")
elif(x==turta):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Entrada:", x)
	print("Casa:", mensagem)
-- ERROR:
File "XXXX", line 25
    print("Casa:", mensagem)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:03:09) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
if(x==lobo):
	mensagem = ("Stark")
elif(x==leao):
	mensagem = ("Lannister")
elif(x==veado):
	mensagem = ("Baratheon")
elif(x==dragao):
	mensagem = ("Targaryen")
elif(x==rosa):
	mensagem = ("Tyrell")
elif(x==sol):
	mensagem = ("Martell")
elif(x==lula):
	mensagem = ("Greyjoy")
elif(x==esfolado):
	mensagem = ("Bolton")
elif(x==turta):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Entrada:", x)
print("Casa:", mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:05:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Entrada:", x)
print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:05:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Entrada:", x)
print("Casa:", mensagem)
-- EXECUTION TIME:
0.132466
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Brasao invalido
Entrada: tambaqui
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:05:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Entrada:", x)
	print("Casa:", mensagem)
-- ERROR:
File "XXXX", line 25
    print("Casa:", mensagem)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:06:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
	print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:06:33) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:06:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:07:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:08:07) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	mensagem = ("Stark")
elif(x== "leao"):
	mensagem = ("Lannister")
elif(x== "veado"):
	mensagem = ("Baratheon")
elif(x== "dragao"):
	mensagem = ("Targaryen")
elif(x== "rosa"):
	mensagem = ("Tyrell")
elif(x== "sol"):
	mensagem = ("Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")
print("Casa:", mensagem)
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:12:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:12:29) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.141361
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:12:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:13:02) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	mensagem = ("Greyjoy")
elif(x=="esfolado"):
	mensagem = ("Bolton")
elif(x=="turta"):
	mensagem = ("Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 03:14:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 03:14:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saí
x = input("descricao do brasao:" )
print("Entrada:", x)
if(x== "lobo"):
	print("Casa: Stark")
elif(x== "leao"):
	print("Casa: Lannister")
elif(x== "veado"):
	print("Casa: Baratheon")
elif(x== "dragao"):
	print("Casa: Targaryen")
elif(x== "rosa"):
	print("Casa: Tyrell")
elif(x== "sol"):
	print("Casa: Martell")
elif(x== "lula"):
	print("Casa: Greyjoy")
elif(x=="esfolado"):
	print("Casa: Bolton")
elif(x=="turta"):
	print("Casa: Tully")
else:
	print("Brasao invalido")

-- EXECUTION TIME:
0.208794
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
